# Revealer

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  ape-config.yaml  encrypt.py  launch_bot.py  message_parser.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: test.yaml  validate.yaml
contracts/: Contribution.sol  NFT.sol  TestnetContribution.sol
crypto/: encrypt.py
revealer/: bob_and_other_networky_things.py  conditions.py  epilogue.py
revealer_bot/: bob_and_other_networky_things.py  bot_lair.py  bot_responses.py  built_in_messages.py  decryption_action.py  launch_bot.py  message_parser.py  message_utils.py  network_status.py  revealer_commands.py  tmk.py  types.py  utils.py
scripts/: deploy.py  deploy_contribution.py  deploy_nft.py  read.py  reveal_heretofore_secret.py
tests/: conftest.py  test_contribution.py  test_main.py
utilities/: contribution_utilities.py
